<resources>
    Main Activity
    <string name="appName">CricEasy</string>
    <string name="appLogo">CricEasy</string>
    <string name="newMatchButton">New Match</string>
    <string name="pastMatches">Past Matches</string>
    Match Info Activity
    <string name="matchType">Match Type : </string>
    <string name = "matchInfoPageHeading"> Enter Match Details</string>
    <string name="limitedOversRadioButton">Limited Overs</string>
    <string name="boxCricketRadioGroup">Box Cricket</string>
    <string name="noOfOversTextView">Overs : </string>
    <string name="noOfOversEditText">Type Overs</string>
    <string name="ballTypeTextView">Type of Ball : </string>
    <string name="leatherBallRadioButton">Leather</string>
    <string name="tennisBallRadioButton">Tennis</string>
    <string name="otherBallRadioButton">Other</string>
    <string name="placeTextView">City / Town</string>
    <string name="placeEditText">Select location</string>
    <string name="dateTextView">Date &amp; Time</string>
    <string name="dateEditText">Select Date &amp; Time</string>
    <string name="backButton">Back</string>
    <string name="nextButton">Next</string>
    Team Creation Activity
    <string name="team1Image">Team 1 Image</string>
    <string name="team2Image">Team 2 Image</string>
    <string name="team1ContentDescription">Click to select Team 1</string>
    <string name="team2ContentDescription">Click to select Team 2</string>
    <string name="selectTeamAButton">Select Team A</string>
    <string name="selectTeamBButton">Select Team B</string>
    <string name="versus">VS</string>
    Team Selection Activity
    <string name="teamNameTextView">Team Name</string>
    <string name="teamNameAutofillHint">Enter Team Name</string>
    <string name="okayButton">Submit</string>
    Toss Activity
    <string name = "tossHeadingTextView">Toss</string>
    <string name = "tossCallingTeamTextView">Toss Call By :</string>
    <string name = "tossWinningTeamTextView">Toss Won By :</string>
    <string name = "tossWonTeamChooseToTextView">Toss Won Team Choose To :</string>
    <string name = "batRadioButton">Bat</string>
    <string name = "bowlRadioButton">Bowl</string>
    <string name = "tossAnimationTextView">Tap the Coin to Flip</string>
    <string name = "tossCoinContentDescription">Toss Coin</string>
    <string name = "needHelpButton">Need Help ?</string>
    <string name = "letsPlayButton">Let\'s Play</string>
    <string name = "headTossOutcomeTextView">It\'s Heads</string>
    <string name = "tailTossOutcomeTextView">It\'s Tails</string>
    Selecting S,Ns and Bow Activity
    <string name = "selectSNsAndBowTextView">Select S,Ns and Bowler</string>
    <string name = "battingTextView">Batting</string>
    <string name = "selectStrikerContentDescription">Select Striker Image</string>
    <string name = "selectStrikerTextView">Select Striker</string>
    <string name = "bowlingTextView">Bowling</string>
    <string name = "selectNonStrikerContentDescription">Select Non Striker Image</string>
    <string name = "selectNonStrikerTextView">Select Non Striker</string>
    <string name = "selectBowlerContentDescription">Select Bowler Image</string>
    <string name = "selectBowlerTextView">Select Bowler</string>
    <string name = "startScoringButton">Start Scoring</string>
    Selecting Player Activity
    <string name = "playerTypeTextView">Select New Player</string>
    <string name = "selectPlayerName">Select Player Name</string>
    <string name = "selectPlayerEditText">Enter Player Name</string>
    <string name="selectNewPlayerSetText">Select New %1$s</string>
    MpInfo Layout
    <string name="teamsHeading">Teams</string>
    <string name="matchTypeKey">Match Type : </string>
    <string name="oversKey">Overs : </string>
    <string name="ballTypeKey">Ball Type : </string>
    <string name="venueKey">Venue : </string>
    <string name="dateKey">Time : </string>
    <string name="wicket_type">Type of Dismissal</string>
    <string name="bowled_rb">Bowled </string>
    <string name="caught_rb">Caught</string>
    <string name="run_out_rb">Run-Out</string>
    <string name="stumped_rb">Stumped</string>
    <string name="lbw_rb">LBW</string>
    <string name="runs_in_wicket">Runs Scored in Wicket</string>
    <string name="runs_input">Enter Runs</string>
    <string name="type_of_ball">Type of delivery</string>
    <string name="normal_ball">Normal</string>
    <string name="bye_leg_ball">By / Lb</string>
    <string name="wide_ball">Wide</string>
    <string name="no_ball">No-ball</string>
    <string name="no_ball_bat">From Bat</string>
    <string name="no_ball_by_lby">From by/lb</string>
    <string name="runs_from">Runs from</string>
    <string name="out_batsman">Out Batsman</string>
    <string name="striker_out">striker</string>
    <string name="non_striker_out">non-striker</string>
    <string name="out_end">Out-End</string>
    <string name="striker_end">striker</string>
    <string name="non_striker_end">non-striker</string>
    <string name="submitButton">Submit</string>
    <string name="cancelButton">Cancel</string>
    <string name="stumped_ball_type">Ball type while Stumping</string>
    activity match
    <string name="infoButton">Info</string>
    <string name="summaryButton">Summary/Live</string>
    <string name="scorecardButton">Scorecard</string>
    <string name="commentaryButton">Commentary</string>
    <string name="teamsButton">Teams</string>
    <string name="floatingButtonContentDescription">Open the Scoring Popup</string>
    <string name="shareButtonContentDescription">Share match</string>
    activity scoring
    <string name="zeroScoringButton">0</string>
    <string name="oneScoringButton">1</string>
    <string name="twoScoringButton">2</string>
    <string name="threeScoringButton">3</string>
    <string name="fourScoringButton">4</string>
    <string name="fiveScoringButton">5</string>
    <string name="sixScoringButton">6</string>
    <string name="sevenScoringButton">7</string>
    <string name="eightScoringButton">8</string>
    <string name="wideScoringButton">Wide</string>
    <string name="noBallScoringButton">NoBall</string>
    <string name="byeScoringButton">Bye</string>
    <string name="legByeScoringButton">LegBye</string>
    <string name="wicketScoringButton">Wicket</string>
    <string name="deadScoringButton">Dead</string>
    <string name="undoScoringButton">Undo</string>
    <string name="backButtonForPopup">Back</string>
    activity for extras
    <string name="hintForExtraRunsEditText">Enter Extra Runs(0 if no runs are scored)</string>
    <string name="runsFromBat">Bat</string>
    <string name="runsFromBye">Bye</string>
    <string name="runsFromLegBye">LegBye</string>
    activity secondInnings
    <string name = "startSecondInningsButton">Start Second Innings</string>
    <string name = "firstInningsOverText"> First Innings Ended</string>
    <string name = "secondInningsOverText"> Second Innings Starting Soon</string>
    <string name = "endInningsText"> End Match</string>
    team fragment
    <string name="playerImage">Team</string>
    <string name = "playerNameTextView">Player name</string>
    <string name = "playerIconContentDescription">Player Icon Image</string>
    live fragment
    <string name="batterName">Batter</string>
    <string name="batterRuns">R</string>
    <string name="batterBalls">B</string>
    <string name="batterFours">4s</string>
    <string name="batterSixes">6s</string>
    <string name="batterStrikeRate">SR</string>
    <string name="partnershipHeading">Partnership</string>
    <string name="runRateHeading">RunRate</string>
    <string name="bowlerName">Bowler</string>
    <string name="bowlerOvers">O</string>
    <string name="bowlerMaidens">M</string>
    <string name="bowlerRuns">R</string>
    <string name="bowlerWickets">W</string>
    <string name="bowlerEconomy">ECO</string>
    commentary fragment
    <string name = "teamACommentaryContentDes" >Team 1 commentary</string>
    <string name = "teamBCommentaryContentDes" >Team 2 commentary</string>















</resources>