<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scoringActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/scoringButtonsTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarStyle">
            <Button
                android:id="@+id/zeroScoringButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:tag="0"
                android:text="@string/zeroScoringButton" />

            <Button
                android:id="@+id/oneScoringButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:tag="1"
                android:text="@string/oneScoringButton" />

            <Button
                android:id="@+id/twoScoringButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:tag="2"
                android:text="@string/twoScoringButton" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarStyle">


            <Button
                android:id="@+id/threeScoringButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:tag="3"
                android:text="@string/threeScoringButton" />

            <Button
                android:id="@+id/fourScoringButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:tag="4"
                android:text="@string/fourScoringButton" />

            <Button
                android:id="@+id/sixScoringButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:tag="6"
                android:text="@string/sixScoringButton" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarStyle">

        <Button
                android:id="@+id/fiveScoringButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:tag="5"
                android:text="@string/fiveScoringButton" />

            <Button
                android:id="@+id/sevenScoringButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/sevenScoringButton" />

            <Button
                android:id="@+id/eightScoringButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/eightScoringButton" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarStyle">

        <Button
                android:id="@+id/wideScoringButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/wideScoringButton" />

            <Button
                android:id="@+id/noBallScoringButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/noBallScoringButton" />

            <Button
                android:id="@+id/button13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/deadScoringButton" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarStyle">


            <Button
                android:id="@+id/byeScoringButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/byeScoringButton" />

            <Button
                android:id="@+id/legByeScoringButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/legByeScoringButton" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/undoScoringButton" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarStyle">
        <Button
                android:id="@+id/wicketScoringButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/wicketScoringButton" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>