<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/dismissal_type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wicket_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <RadioGroup
        android:id="@+id/dismissal_type_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13">

        <RadioButton
            android:id="@+id/bowled_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bowled_rb" />

        <RadioButton
            android:id="@+id/caught_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/caught_rb" />

        <RadioButton
            android:id="@+id/run_out_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/run_out_rb" />

        <RadioButton
            android:id="@+id/stumped_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stumped_rb" />

        <RadioButton
            android:id="@+id/lbw_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbw_rb" />
    </RadioGroup>

    <TextView
        android:id="@+id/runs_in_wicket_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/runs_in_wicket"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223" />

    <EditText
        android:id="@+id/runs_input_et"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:autofillHints="none"
        android:ems="10"
        android:hint="@string/runs_input"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295" />

    <LinearLayout
        android:id="@+id/out_ends_ll"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635">

        <TextView
            android:id="@+id/out_batsman_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/out_batsman" />

        <RadioGroup
            android:id="@+id/out_batsman_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/striker_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/striker_out" />

            <RadioButton
                android:id="@+id/non_striker_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_striker_out" />
        </RadioGroup>

        <TextView
            android:id="@+id/out_end_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/out_end" />

        <RadioGroup
            android:id="@+id/out_end_rg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/striker_end_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/striker_end" />

            <RadioButton
                android:id="@+id/non_striker_end_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/non_striker_end" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/runs_source_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42000002">

        <TextView
            android:id="@+id/delivery_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_of_ball" />

        <RadioGroup
            android:id="@+id/ball_type_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/normal_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal_ball" />

            <RadioButton
                android:id="@+id/by_lb_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bye_leg_ball" />

            <RadioButton
                android:id="@+id/no_ball_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_ball" />

            <RadioButton
                android:id="@+id/wide_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wide_ball" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/runs_source_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/from_bat_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_ball_bat" />

            <RadioButton
                android:id="@+id/from_bylb_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_ball_by_lby" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.303"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.935" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="okay"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.688"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.935" />

    </LinearLayout>

</LinearLayout>